[gd_scene load_steps=5 format=3 uid="uid://comir0ikmt2og"]

[ext_resource type="Script" path="res://world/grass.gd" id="1_kmsdi"]
[ext_resource type="Texture2D" uid="uid://s8kv1lnqvm2s" path="res://art/Effects/Particle/grass/grass.png" id="2_vjltl"]
[ext_resource type="Texture2D" uid="uid://ddpykgcgqo0ve" path="res://art/Shadows/SmallShadow.png" id="3_1bylg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iu2bc"]
radius = 2.0
height = 10.0

[node name="Grass" type="Node2D"]
script = ExtResource("1_kmsdi")

[node name="Animator" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Grass" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, -2)
texture = ExtResource("2_vjltl")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_iu2bc")

[node name="SmallShadow" type="Sprite2D" parent="."]
position = Vector2(-1.19209e-07, 1.19209e-07)
scale = Vector2(0.625, 0.625)
texture = ExtResource("3_1bylg")

[connection signal="timeout" from="Animator" to="." method="_on_animator_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
